--- a/src/FFXIVLazyStore/FFXIVLazyStore/Components/Pages/LazyShopFavorite.razor
+++ b/src/FFXIVLazyStore/FFXIVLazyStore/Components/Pages/LazyShopFavorite.razor
@@ -1,6 +1,7 @@
 ﻿@page "/LazyShopFavorite"
+@using FFXIVLazyStore.Service
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
-@inject ProtectedLocalStorage ProtectedLocalStorage
+@inject IProtectLocalStorageService ProtectedLocalStorage
 
 <PageTitle>LazyShopFavorite</PageTitle>
 
