--- a/src/FFXIVLazyStore/FFXIVLazyStore/Components/App.razor
+++ b/src/FFXIVLazyStore/FFXIVLazyStore/Components/App.razor
@@ -7,7 +7,7 @@
     <base href="/" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="FFXIVLazyStore.styles.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="lazyshop.ico" />
     <RadzenTheme Theme="material" @rendermode="InteractiveServer" />
     <HeadOutlet @rendermode="InteractiveServer" />
 </head>
