--- a/src/FFXIVLazyStore/FFXIVLazyStore/Components/Layout/NavMenu.razor
+++ b/src/FFXIVLazyStore/FFXIVLazyStore/Components/Layout/NavMenu.razor
@@ -28,6 +28,7 @@
         </RadzenPanelMenuItem>
         <RadzenPanelMenuItem Text="空房子" Icon="Home" Path="Housing"></RadzenPanelMenuItem>
         <RadzenPanelMenuItem Text="幻巧工具" Icon="compare_arrows" Path="FauxHollowsSolver"></RadzenPanelMenuItem>
+@*         <RadzenPanelMenuItem Text="漢化包" Icon="get_app" Path="GameLocalization"></RadzenPanelMenuItem> *@
     </RadzenPanelMenu>
 </RadzenStack>
 
