--- a/src/FFXIVLazyStore/FFXIVLazyStore/Components/Pages/FauxHollowsSolver.razor
+++ b/src/FFXIVLazyStore/FFXIVLazyStore/Components/Pages/FauxHollowsSolver.razor
@@ -296,6 +296,8 @@
 	</RadzenStack>
 
 </RadzenStack>
+
+<script src="./hollows-solver/js/data.js"></script>
 <script src="./hollows-solver/js/code.js"></script>
 
 @code {
